third wierd page updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
+    <a href="/">Home</a> |
+    <a href="/about/">About</a>
+    <a href="/whatis/">Cheese?</a>
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>🧑‍🚀 Hello, Cheesonaut!</h1>
