--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,9 @@ body {
 	font-size: 20px;
 	line-height: 1.7;
 }
+*{
+box-sizeing: boarder-box;
+}
 main {
 	width: 720px;
 	max-width: calc(100% - 2em);
